--- a/src/components/Best-sellers/Best-sellers.scss
+++ b/src/components/Best-sellers/Best-sellers.scss
@@ -6,6 +6,7 @@
     .header--text {
         color: white;
         font-family: 'Pacifico', cursive;
+        text-shadow: #000 0px 0px 20px;
     }
 
     .card--container {
