--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -29,6 +29,7 @@
   margin-top: 80px;
   color: white;
   font-family: 'Pacifico', cursive;
+  text-shadow: #000 0px 0px 20px;
 }
 
 .about--container .right-column .card {
