--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -27,6 +27,7 @@
                 margin-top: 80px;
                 color: white;
                 font-family: 'Pacifico', cursive;
+                text-shadow: #000 0px 0px 20px;
             }
 
             .card {
