--- a/src/components/Best-sellers/Best-sellers.scss
+++ b/src/components/Best-sellers/Best-sellers.scss
@@ -10,7 +10,9 @@
     }
 
     .card--container {
+        color: white;
         font-family: 'Pacifico', cursive;
+        background-color: rgb(211, 170, 121);
 
 
         img {
