--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -8,6 +8,7 @@
             margin-left: -25px;
 
             .pic {
+                background-color:rgb(211, 170, 121);
                 margin-top: 10px;
                 margin-left: 20px;
                 max-width: 45%;
@@ -35,6 +36,7 @@
                 margin-left: -10px;
 
                     .text {
+                        border: 4px solid rgb(211, 170, 121);
                         text-align: justify;
                         text-justify: inter-word;
                     }
