--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,7 @@
+.Navbar {
+  font-family: 'Kdam Thmor Pro', sans-serif;
+}
+
 .logo {
   height: 50px;
 }
@@ -13,6 +17,7 @@
 .links:hover {
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
+  color: #f2cc9e;
 }
 
 .toggle {
