--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,7 @@
+.Navbar {
+    font-family: 'Kdam Thmor Pro', sans-serif;
+}
+
 .logo {
     height: 50px;
 }
@@ -9,6 +13,7 @@
     transition: 1s;
     &:hover {
        transform: scale(1.2);
+       color: rgb(242, 204, 158);
     }
 }
 
